--- a/.travis.yml
+++ b/.travis.yml
@@ -28,13 +28,14 @@ matrix:
 
 
 script:
-  - mulle-sde -DMULLE_SDE_EXTENSION_BASE_PATH="${PWD}/src" extension list
+  - mulle-sde -DMULLE_SDE_EXTENSION_BASE_PATH="${PWD}/src" extension show
   - mulle-sde -DMULLE_SDE_EXTENSION_BASE_PATH="$PWD/src" init -d exe -m foundation/objc-developer executable
   - cd exe
-  - mulle-sde --no-search craft
+  - mulle-sde craft --release
   - ./build/Release/exe
   - cd ..
   - mulle-sde -DMULLE_SDE_EXTENSION_BASE_PATH="$PWD/src" init -d lib -m foundation/objc-developer library
   - cd lib
-  - mulle-sde --no-search craft
+  - mulle-sde craft
   - cd ..
+
