* back to trusty, since xenial has no 7.0.0.0 mulle-clang

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,15 @@ language: c
 matrix:
   include:
     - os: linux
-      dist: xenial
+      dist: trusty
       sudo: required
+      addons:
+         apt:
+            packages:
+               - cmake
+               - cmake-data
+            sources:
+               - sourceline: 'ppa:george-edison55/cmake-3.x'
       before_install:
         - curl -sS "https://www.codeon.de/dists/codeon-pub.asc" | sudo apt-key add -
         - echo "deb [arch=amd64] http://download.codeon.de `lsb_release -c -s` main" | sudo tee /etc/apt/sources.list.d/codeon.de-main.list > /dev/null
