move to xenial, since trusty doesn't work so good anymore

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,8 @@ language: c
 matrix:
   include:
     - os: linux
-      dist: trusty
+      dist: xenial
       sudo: required
-      addons:
-         apt:
-            packages:
-               - cmake
-               - cmake-data
-            sources:
-               - sourceline: 'ppa:george-edison55/cmake-3.x'
       before_install:
         - curl -sS "https://www.codeon.de/dists/codeon-pub.asc" | sudo apt-key add -
         - echo "deb [arch=amd64] http://download.codeon.de `lsb_release -c -s` main" | sudo tee /etc/apt/sources.list.d/codeon.de-main.list > /dev/null
@@ -26,10 +19,10 @@ matrix:
         - "brew update"
         - "brew install mulle-kybernetik/software/mulle-foundation-developer"
 
-
 script:
   - mulle-sde version
   - mulle-clang --version
+  - cmake --version
   - mulle-sde -DMULLE_SDE_EXTENSION_BASE_PATH="${PWD}/src" extension show
   - mulle-sde -DMULLE_SDE_EXTENSION_BASE_PATH="$PWD/src" init -d exe -m foundation/objc-developer executable
   - cd exe
