--- a/src/foundation/github-actions/project/all/.github/workflows/mulle-sde-ci.yml
+++ b/src/foundation/github-actions/project/all/.github/workflows/mulle-sde-ci.yml
@@ -35,7 +35,7 @@ jobs:
     - uses: mulle-sde/github-ci@v1
       if: ${{ ! env.ACT }}
 
-    - uses: mulle-objc/github-ci@v2
+    - uses: mulle-cc/github-ci@v4
       if: ${{ ! env.ACT }}
 
     - name: Dump Project Environment
