--- a/.github/workflows/dockerfile-ci.yml
+++ b/.github/workflows/dockerfile-ci.yml
@@ -10,6 +10,8 @@ jobs:
   
    steps:
      - uses: actions/checkout@v2
-     - name: Build Docker image 
+       run:  echo "$HOME/bin" >> $GITHUB_PATH
+
+     - name: Build Docker image
        run: docker build .
  
