--- a/.github/workflows/mulle-sde-ci.yml
+++ b/.github/workflows/mulle-sde-ci.yml
@@ -21,8 +21,9 @@ jobs:
     - name: Set MULLE_HOSTNAME
       run: |
         name="${GITHUB_REF##*/}"
-        MULLE_HOSTNAME="ci-${name##*-}"
+        MULLE_HOSTNAME="${MULLE_HOSTNAME:-ci-${name##*-}}"
         echo "MULLE_HOSTNAME=${MULLE_HOSTNAME}" >> $GITHUB_ENV
+
 
     - name: Add to path
       run:  echo "$HOME/bin" >> $GITHUB_PATH
@@ -31,13 +32,10 @@ jobs:
       run:  env | sort
 
     - uses: actions/checkout@v2
-      if: ${{ ! env.ACT }}
 
     - uses: mulle-sde/github-ci@v1
-      if: ${{ ! env.ACT }}
 
     - uses: mulle-cc/github-ci@v4
-      if: ${{ ! env.ACT }}
       
     - name: List extensions
       run: |
