--- a/.github/workflows/mulle-sde-ci.yml
+++ b/.github/workflows/mulle-sde-ci.yml
@@ -59,4 +59,6 @@ jobs:
         echo "Adding environment-host-ci-prerelease file from Foundation/test" >&2 &&
         curl -L --output .mulle/etc/env/environment-host-ci-prerelease.sh "https://raw.githubusercontent.com/MulleFoundation/Foundation/prerelease/test/.mulle/etc/env/environment-host-ci-prerelease.sh" >&2 &&
         mulle-sde craft --release &&
-        "./kitchen/Release/exe"
+        [ -x "./kitchen/Release/exe" -o "./kitchen/exe" ] &&
+        ( [ ! -x "./kitchen/Release/exe" ] || "./kitchen/Release/exe" ) &&
+        ( [ ! -x "./kitchen/exe" ] || "./kitchen/exe" )
