--- a/.github/workflows/dockerfile-ci.yml
+++ b/.github/workflows/dockerfile-ci.yml
@@ -1,4 +1,3 @@
-
 name: DockerfileCI
 
 on: [push]
@@ -7,10 +6,12 @@ on: [push]
 jobs:
   build:
    runs-on: ubuntu-latest
-  
+
    steps:
      - uses: actions/checkout@v2
+         if: ${{ ! env.ACT }}
 
      - name: Build Docker image
-       run: docker build .
+         if: ${{ ! env.ACT }}
+        run: docker build .
  
