fix up CI revamp README.md for IMO easier readability

--- a/dox/Makefile
+++ b/dox/Makefile
@@ -1,10 +1,12 @@
 
 PIX=\
-relationships.png
+relationships.svg
 
 %.png: %.dot
 	dot -Tpng -o $*.png $<
 
+%.svg: %.dot
+	dot -Tsvg -o $*.svg $<
 
 all: $(PIX)
 
