fix apt-installer add workflow for it

--- a/.github/workflows/homebrew-ci.yml
+++ b/.github/workflows/homebrew-ci.yml
@@ -22,11 +22,15 @@ jobs:
     - name: Dump Environment
       run:  env | sort
 
-    - uses: actions/checkout@v3
-
-    - name: Install
+    - name: Install prerelease
+      if: {{ env.MULLE_HOSTNAME == "ci-prerelease" }}
       run: |
-        brew install mulle-kybernetik/software/foundation-developer
+        brew install mulle-kybernetik/prerelease/foundation-developer
+
+    - name: Install release
+      if: {{ env.MULLE_HOSTNAME != "ci-prerelease" }}
+      run: |
+        brew install mulle-kybernetik/prerelease/foundation-developer
         
     - name: Foundation Executable
       run: |
