* fixed for better tool support in mulle-env

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@ version.old
 .gdb_history
 cmake-build-*/
 .ackrc
+wilted/
+mulle-template-composer-*
+mulle-markdown-preview-*.html
+build-*
+*.sublime-workspace
