--- a/.github/workflows/apt-ci.yml
+++ b/.github/workflows/apt-ci.yml
@@ -4,7 +4,7 @@ on: [push,workflow_dispatch]
 
 jobs:
   build:
-   runs-on: ubuntu-latest
+   runs-on: ubuntu-24.04
 
    steps:
    - name: Install sudo
