--- a/.github/workflows/mulle-sde-ci.yml
+++ b/.github/workflows/mulle-sde-ci.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest] # macos-latest,
+        os: [ ubuntu-24.04 ] # macos-latest,
 
     steps:
     - name: Set MULLE_HOSTNAME
