--- a/Dockerfile.prerelease
+++ b/Dockerfile.prerelease
@@ -40,8 +40,8 @@ RUN DEBIAN_FRONTEND=noninteractive \
    && chmod 755 installer-all \
    && ./installer-all /usr no \
 \
-   && wget "https://github.com/mulle-cc/mulle-clang-project/releases/download/14.0.6.2/mulle-clang-14.0.6.2-bullseye-amd64.deb"  \
-   && dpkg --install "mulle-clang-14.0.6.2-bullseye-amd64.deb" \
+   && wget "https://github.com/mulle-cc/mulle-clang-project/releases/download/17.0.6.3/mulle-clang-17.0.6.3-bookworm-amd64.deb"  \
+   && dpkg --install "mulle-clang-17.0.6.3-bookworm-amd64.deb"
 
 
 
