--- a/.github/workflows/check-installer-url.yml
+++ b/.github/workflows/check-installer-url.yml
@@ -3,7 +3,7 @@ name: URL Health Check
 on:
   schedule:
     # Run every day at 9 AM UTC
-    - cron: '0 9 * * *'
+    - cron: '0 9 * * 1'
   workflow_dispatch: # Allow manual triggering
   push:
     branches: [ main, master ]
