--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,11 @@ cola/wilted/
 *.bak
 .mulle/etc/make/build-dir
 vgcore.*
+test*/**/*.test.*
+/*.md
+!/AGENTS.md
+!/README.md
+build-6c1e/
+build-9b97/
+build-9dae/
+environment-user-*.sh
